--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "jest --env=jsdom --watch",
     "test:coverage": "jest --env=jsdom --coverage",
-    "prettify": "prettier --write ./**/*.ts",
+    "style:check": "prettier --check ./**/*.ts",
+    "style:fix": "prettier --write ./**/*.ts",
+    "type-check": "tsc -p tsconfig.build.json --noEmit --pretty",
     "lint:eslint:fix": "yarn eslint . --ext .ts,.tsx --fix",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
@@ -19,6 +21,14 @@
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/commitizen-emoji"
+    },
+    "commitizenEmoji": {
+      "conventionalFormat": true
+    }
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.1.0",
@@ -49,8 +59,6 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.3",
     "@testing-library/react-hooks": "^7.0.2",
@@ -80,7 +88,8 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.3.3",
-    "pre-commit": "^1.2.2",
+    "commitizen": "4.2.6",
+    "commitizen-emoji": "1.0.5",
     "prettier": "2.5.1",
     "prop-types": "^15.8.1",
     "ts-jest": "^28.0.4",
