:green_heart: fixci: fix ci build

--- a/.github/workflows/cd-staged.yml
+++ b/.github/workflows/cd-staged.yml
@@ -4,7 +4,7 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, synchronize]
 jobs:
   Publish:
     runs-on: ubuntu-latest
