--- a/.github/workflows/cd-staged.yml
+++ b/.github/workflows/cd-staged.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   Publish:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.head_ref, 'renovate/') }}
     steps:
       - uses: actions/checkout@v3
       - name: Install Vercel CLI
