--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production next start",
+    "start": "cross-env NODE_ENV=production next start -p 3003",
     "lint": "next lint",
     "lint:staged": "lint-staged",
     "prepare": "husky install",
@@ -46,8 +46,8 @@
     "lodash-es": "4.17.21",
     "next": "12.3.4",
     "next-compose-plugins": "2.2.1",
-    "next-redux-wrapper": "8.0.0",
     "next-pwa": "5.5.5",
+    "next-redux-wrapper": "8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intl": "6.2.5",
@@ -81,6 +81,8 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-plugin-transform-remove-console": "6.9.4",
     "babel-plugin-typescript-to-proptypes": "2.0.0",
+    "commitizen": "4.2.6",
+    "commitizen-emoji": "1.0.5",
     "eslint": "8.8.0",
     "eslint-config-next": "12.3.4",
     "eslint-plugin-react": "7.28.0",
@@ -88,8 +90,6 @@
     "jest": "29.0.0",
     "jest-environment-jsdom": "29.0.0",
     "lint-staged": "13.0.0",
-    "commitizen": "4.2.6",
-    "commitizen-emoji": "1.0.5",
     "prettier": "2.8.1",
     "prop-types": "15.8.1",
     "ts-jest": "29.0.0",
