--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "jest": "29.0.0",
     "jest-environment-jsdom": "29.0.0",
     "lint-staged": "13.0.0",
+    "next-router-mock": "0.8.0",
     "prettier": "2.8.1",
     "prop-types": "15.8.1",
     "ts-jest": "29.0.0",
