:pencil2: typo: fix typos

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
         "namedComponents": "arrow-function",
         "unnamedComponents": "arrow-function"
       }
-    ]
+    ],
+    "@typescript-eslint/ban-ts-comment": "warn"
   }
 }
