--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coverage": "jest --env=jsdom --coverage",
     "style:check": "prettier --check ./**/*.ts",
     "style:fix": "prettier --write ./**/*.ts",
-    "type-check": "tsc -p tsconfig.build.json --noEmit --pretty",
+    "type-check": "tsc -p tsconfig.json --noEmit --pretty",
     "lint:eslint:fix": "yarn eslint . --ext .ts,.tsx --fix",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
@@ -65,6 +65,7 @@
     "@types/isomorphic-fetch": "0.0.36",
     "@types/jest": "29.2.5",
     "@types/lodash": "4.14.191",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.18",
     "@types/prop-types": "15.7.5",
     "@types/react": "18.0.26",
@@ -83,7 +84,6 @@
     "babel-plugin-typescript-to-proptypes": "2.0.0",
     "commitizen": "4.2.6",
     "commitizen-emoji": "1.0.5",
-    "next-router-mock": "0.8.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-plugin-react": "7.31.11",
@@ -91,6 +91,7 @@
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "lint-staged": "13.1.0",
+    "next-router-mock": "0.8.0",
     "prettier": "2.8.1",
     "prop-types": "15.8.1",
     "ts-jest": "29.0.3",
