--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nextjs-template",
   "private": true,
+  "version": "1.1.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build",
