--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "nextjs-template",
   "private": true,
-  "version": "1.1.0",
+  "version": "0.0.1",
+  "templateVersion": "1.1.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build",
