--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "templateVersion": "1.2.3",
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev -p 3010",
+    "dev:turbo": "cross-env NODE_ENV=development next dev --turbo -p 3010",
     "build": "next build",
     "start": "cross-env NODE_ENV=production next start -p 3003",
     "lint": "next lint",
     "lint:staged": "lint-staged",
     "prepare": "husky install",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:watch": "jest --env=jsdom --watch",
-    "test:coverage": "jest --env=jsdom --coverage",
+    "test": "cross-env NODE_ENV=test jest --env=jsdom --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --env=jsdom --coverage",
     "style:check": "prettier --check ./**/*.{ts,tsx}",
     "style:fix": "prettier --write ./**/*.{ts,tsx}",
     "type-check": "tsc -p tsconfig.json --noEmit --pretty",
