:heavy_minus_sign: deprm: remove babel deps

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "templateVersion": "1.2.3",
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev -p 3010",
-    "dev:turbo": "cross-env NODE_ENV=development next dev --turbo -p 3010",
+    "dev:turbo": "cross-env NODE_ENV=development next dev --turbo --show-all -p 3010",
     "build": "next build",
     "start": "cross-env NODE_ENV=production next start -p 3003",
     "lint": "next lint",
@@ -57,15 +57,13 @@
     "util": "0.12.5"
   },
   "devDependencies": {
-    "@babel/core": "7.20.12",
-    "@babel/preset-env": "7.20.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/react-hooks": "8.0.1",
     "@types/isomorphic-fetch": "0.0.36",
     "@types/jest": "29.2.6",
     "@types/lodash": "4.14.191",
-    "@types/lodash-es": "^4.17.6",
+    "@types/lodash-es": "4.17.6",
     "@types/node": "18.11.18",
     "@types/prop-types": "15.7.5",
     "@types/react": "18.0.27",
@@ -73,15 +71,6 @@
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "@welldone-software/why-did-you-render": "7.0.1",
-    "babel-jest": "29.3.1",
-    "babel-plugin-formatjs": "10.3.35",
-    "babel-plugin-module-resolver": "5.0.0",
-    "babel-plugin-react-remove-properties": "0.3.0",
-    "babel-plugin-require-context-hook": "1.0.0",
-    "babel-plugin-transform-dynamic-import": "2.1.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "babel-plugin-transform-remove-console": "6.9.4",
-    "babel-plugin-typescript-to-proptypes": "2.0.0",
     "commitizen": "4.3.0",
     "commitizen-emoji": "1.0.5",
     "eslint": "8.32.0",
